--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^2.2.19",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
+        "vue": "^3.2.24",
+        "vue-loader": "^16.8.3",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue-router": "^3.5.3",
+        "element-plus": "^1.2.0-beta.6",
+        "sweetalert2": "^11.2.2",
+        "vue-router": "^4.0.12",
         "vuex": "^4.0.2"
     }
 }
