--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "dependencies": {
         "element-plus": "^1.2.0-beta.6",
+        "laravel-echo": "^1.11.3",
+        "pusher-js": "^7.0.3",
         "sweetalert2": "^11.2.2",
         "vue-router": "^4.0.12",
         "vuex": "^4.0.2"
